--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "TEMPLATE_GULP",
+  "name": "TEST",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
